# timer-demo

./: .bazelrc  .gitignore  AGENTS.md  BUILD.bazel  CMakeLists.txt  CODE_REVIEW_REPORT.txt  Jenkinsfile  Jenkinsfile-parasoft  LICENSE  MODULE.bazel  Makefile  Makefile.embedded  README.md  README_EMBEDDED.md  WORKSPACE.bazel  build_embedded.bat  build_timer.sh  clock.c  clock.h  consts.h  cpptestcc-bazel.psrc  cpptestcli.properties  driver.c  inout.h  startup_stm32wb55xx.c  stdinout.c  stm32wb5x.h  stm32wb5x_flash.ld  system_stm32wb5x.c  timer  timer.c  timer.h  timer_stm32wb5.elf  timer_stm32wb5.hex
